Got my images loading in my console, and pulling to my screen. As well as adding in a little bit of styling

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,3 +9,11 @@
 .profile-picture.profile-picture-sm {
   height: 64px;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-position: center;
+  background-size: cover
+}
