I have my images, quotes, and now todos drawing to my console. Working on getting the todos to be created now

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -34,3 +34,9 @@ main {
 .hide-book-open-page-variant+section {
   opacity: 0;
 }
+
+.todo-card {
+  object-position: center;
+  object-fit: contain;
+  width: 100%
+}
